package com.myapp.gallery.ui.util

import androidx.compose.ui.platform.testTag

object TestTag {
    const val LOADING_INDICATOR = "LoadingIndicator"
    const val ALBUMS_SCREEN = "AlbumsScreen"
    const val ERROR_MESSAGE = "ErrorMessage"
    const val RETRY_BUTTON = "RetryButton"
    const val TITLE = "Title"
    const val ALBUM_LIST = "AlbumList"
    const val ALBUM_GRID = "AlbumGrid"
    const val MEDIA_LIST = "MediaList"
    const val MEDIA_GRID = "MediaGrid"
    const val ALBUM_ITEM_PREFIX = "AlbumItem_"
    const val ALBUM_THUMBNAIL_PREFIX = "ALBUM_THUMBNAIL_"
    const val MEDIA_ITEM_PREFIX = "MediaItem_"
    const val ALBUM_DETAILS = "AlbumDetails"
    const val MEDIA_DETAILS = "MediaDetails"
    const val TOP_BAR = "TopBar"
    const val FILTER_BUTTON = "FilterButton"
    const val FILTER_OPTION = "FilterOption"
    const val FILTER_OPTION_LIST = "FilterOptionList"
    const val FILTER_OPTION_GRID = "FilterOptionGrid"
    const val SHIMMER_LOADER = "SHIMMER_LOADER"
    const val MEDIA_FULL_SCREEN_VIEW = "MEDIA_FULL_SCREEN_VIEW"

    const val MEDIA_FULL_SCREEN_VIEW_PAGER = "MEDIA_FULL_SCREEN_VIEW_PAGER"


}